assets/sass/_theme/utils/sidebar.sass
@mixin in-page-with-sidebar
    @include media-breakpoint-up(desktop)
        body:where(:not(.full-width)) main &
            @content

@mixin in-page-without-sidebar
    @include media-breakpoint-up(desktop)
        body.full-width &,
        main > .blocks &,
        .contents-full-width &
            @content

// Use this mixin to override with-aside or without-aside rules
@mixin in-page-with-or-without-sidebar
    @include media-breakpoint-up(desktop)
        body:not(.full-width) &,
        body:not(.full-width) main &,
        main > .blocks &,
        .contents-full-width &,
        body.full-width &
            @content

// Aliases
@mixin full-page
    @include in-page-without-sidebar
        @content

@mixin not-full-page
    @include in-page-with-sidebar
        @content

// Section Program
@mixin in-page-program
    .programs__section &
        @content

@mixin sticky($offset-y: 0px)
    position: sticky
    top: $offset-y
    @if $header-sticky-enabled
        transition: top $header-sticky-transition
        html:not(.is-scrolling-down) &
            top: calc(var(--header-height) + #{$offset-y})

@mixin sidebar($side: start)
    @include media-breakpoint-down(desktop)
        padding: 0 var(--grid-gutter)
        margin-bottom: $spacing-5
    @include media-breakpoint-up(desktop)
        @if $side == start
            margin-left: grid-external-space()
            left: 0
        @else
            margin-right: grid-external-space()
            right: 0
        margin-top: 0
        top: 0
        height: 100%
        position: absolute
        width: columns(4)
        & > div
            @include sticky($spacing-3)
        .toc-container
            position: static
            margin-left: 0
        &:has(aside)
            .toc-container
                border-top: var(--border-width) solid var(--color-border)
                padding-top: $spacing-3

@mixin sidebar-full-width
    @include container
    > div
        display: flex
        align-items: start
        margin-bottom: $spacing-5
    .toc-cta
        margin-bottom: 0
        padding-right: 0
    aside
        flex-shrink: 0
    @include media-breakpoint-down(desktop)
        margin-bottom: $spacing-5

@mixin document-min-height($min-height: 350px)
    min-height: $min-height
    // Add after element to avoid "min-height" to ignore the last block's margin-bottom
    &::after
        content: ''
        display: block
        height: 1px

